// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DimensionItem matches the snapshot 1`] = `
<li
  className="
                item 
                clickable
                
                "
  name="Period"
  onClick={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  style={Object {}}
>
  <div
    className="
                    label
                    
                    "
    data-test="undefined-button-pe"
    tabIndex={0}
  >
    <div
      className="icon-wrapper"
    >
      <SvgClock16
        className="fixed-dimension-icon"
      />
    </div>
    <div
      className="label-wrapper"
    >
      <span
        data-dimensionid="pe"
      >
        Period
      </span>
      <RecommendedIcon
        dataTest="undefined-recommended-icon"
        isRecommended={false}
      />
    </div>
  </div>
  <style />
</li>
`;

exports[`DimensionItem matches the snapshot with locked 1`] = `
<li
  className="
                item 
                clickable
                
                "
  name="Period"
  onClick={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  style={Object {}}
>
  <div
    className="
                    label
                    
                    "
    data-test="undefined-button-pe"
    tabIndex={0}
  >
    <div
      className="icon-wrapper"
    >
      <SvgClock16
        className="fixed-dimension-icon"
      />
    </div>
    <div
      className="label-wrapper"
    >
      <span
        data-dimensionid="pe"
      >
        Period
      </span>
      <RecommendedIcon
        dataTest="undefined-recommended-icon"
        isRecommended={false}
      />
    </div>
    <div
      className="lock-wrapper"
    >
      <SvgLock16 />
    </div>
  </div>
  <style />
</li>
`;

exports[`DimensionItem matches the snapshot with onOptionsClick 1`] = `
<li
  className="
                item 
                clickable
                
                "
  name="Period"
  onClick={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  style={Object {}}
>
  <div
    className="
                    label
                    
                    "
    data-test="undefined-button-pe"
    tabIndex={0}
  >
    <div
      className="icon-wrapper"
    >
      <SvgClock16
        className="fixed-dimension-icon"
      />
    </div>
    <div
      className="label-wrapper"
    >
      <span
        data-dimensionid="pe"
      >
        Period
      </span>
      <RecommendedIcon
        dataTest="undefined-recommended-icon"
        isRecommended={false}
      />
    </div>
  </div>
  <div
    className="options-wrapper"
    data-test="undefined-menu-pe"
  />
  <style />
</li>
`;

exports[`DimensionItem matches the snapshot with recommended 1`] = `
<li
  className="
                item 
                clickable
                
                "
  name="Period"
  onClick={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  style={Object {}}
>
  <div
    className="
                    label
                    
                    "
    data-test="undefined-button-pe"
    tabIndex={0}
  >
    <div
      className="icon-wrapper"
    >
      <SvgClock16
        className="fixed-dimension-icon"
      />
    </div>
    <div
      className="label-wrapper"
    >
      <span
        data-dimensionid="pe"
      >
        Period
      </span>
      <RecommendedIcon
        dataTest="undefined-recommended-icon"
        isRecommended={true}
      />
    </div>
  </div>
  <style />
</li>
`;

exports[`DimensionItem matches the snapshot with selected 1`] = `
<li
  className="
                item 
                clickable
                selected
                "
  name="Period"
  onClick={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  style={Object {}}
>
  <div
    className="
                    label
                    
                    "
    data-test="undefined-button-pe"
    tabIndex={0}
  >
    <div
      className="icon-wrapper"
    >
      <SvgClock16
        className="fixed-dimension-icon"
      />
    </div>
    <div
      className="label-wrapper"
    >
      <span
        data-dimensionid="pe"
      >
        Period
      </span>
      <RecommendedIcon
        dataTest="undefined-recommended-icon"
        isRecommended={false}
      />
    </div>
  </div>
  <style />
</li>
`;
